--- a/TP-FINAL-BIBLIOTECA/app/templates/libros.html
+++ b/TP-FINAL-BIBLIOTECA/app/templates/libros.html
@@ -32,7 +32,7 @@ block content %}
 		<tr>
 			<th>ID</th>
 			<th>Otra cosa</th>
-			<th>Autor</th>
+			<th>AUtor 23123</th>
 			<th>Género</th>
 			<th>Estado</th>
 			<th>Acción</th>
