--- a/TP-FINAL-BIBLIOTECA/app/templates/libros.html
+++ b/TP-FINAL-BIBLIOTECA/app/templates/libros.html
@@ -31,8 +31,8 @@ block content %}
 	<thead>
 		<tr>
 			<th>ID</th>
-			<th>Otra cosa</th>
-			<th>AUtor 23123</th>
+			<th>Titulo</th>
+			<th>Autor</th>
 			<th>Género</th>
 			<th>Estado</th>
 			<th>Acción</th>
