Modifico columna titulo

--- a/TP-FINAL-BIBLIOTECA/app/templates/libros.html
+++ b/TP-FINAL-BIBLIOTECA/app/templates/libros.html
@@ -31,7 +31,7 @@ block content %}
 	<thead>
 		<tr>
 			<th>ID</th>
-			<th>Título</th>
+			<th>Lautaro</th>
 			<th>Autor</th>
 			<th>Género</th>
 			<th>Estado</th>
