--- a/app/templates/libros_disponibles.html
+++ b/app/templates/libros_disponibles.html
@@ -1,20 +1,15 @@
-{% extends "base.html" %} 
-{% block title %}Seleccionar Libro para Préstamo{% endblock %} 
-
-{% block extra_css %}
+{% extends "base.html" %} {% block title %}Seleccionar Libro para Préstamo{%
+endblock %} {% block extra_css %}
 <link
-	rel="stylesheet"
-	href="{{ url_for('static', filename='css/libros_disponibles.css') }}"
+    rel="stylesheet"
+    href="{{ url_for('static', filename='css/libros_disponibles.css') }}"
 />
-{% endblock %}
+{% endblock %} {% block content %}
 
-{% block content %}
-
-<h2>
-    Seleccionar Libro para Préstamo
-</h2>
+<h2>Seleccionar Libro para Préstamo</h2>
 <p class="usuario-target">
-    Prestando a: {{ usuario.nombre }} {{ usuario.apellido }} (DNI: {{ usuario.dni }})
+    Prestando a: {{ usuario.nombre }} {{ usuario.apellido }} (DNI: {{
+    usuario.dni }})
 </p>
 
 <div class="table-container">
@@ -22,7 +17,7 @@
     <table>
         <thead>
             <tr>
-								<th>ID</th>
+                <th>ID</th>
                 <th>Título</th>
                 <th>Autor</th>
                 <th>Género</th>
@@ -32,25 +27,28 @@
         <tbody>
             {% for libro in libros %}
             <tr>
-							<td>{{ libro.id_libro }}</td>
+                <td>{{ libro.id_libro }}</td>
                 <td>{{ libro.titulo }}</td>
                 <td>{{ libro.autor }}</td>
                 <td>{{ libro.genero }}</td>
                 <td>
-									<div class="container-action">
-										 <form action="{{ url_for('confirmar_prestamo', id_usuario=usuario.id_usuario, id_libro=libro.id_libro) }}" method="post">
-											<button class="btn-prestar" type="submit">Prestar</button>
-										</form>
-									</div>
+                    <div class="container-action">
+                        <form
+                            action="{{ url_for('confirmar_prestamo', id_usuario=usuario.id_usuario, id_libro=libro.id_libro) }}"
+                            method="post"
+                        >
+                            <button class="btn-prestar" type="submit">
+                                Prestar
+                            </button>
+                        </form>
+                    </div>
                 </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
     {% else %}
-    <p class="no-libros">
-        Actualmente no hay libros disponibles para prestar.
-    </p>
+    <p class="no-libros">Actualmente no hay libros disponibles para prestar.</p>
     {% endif %}
 </div>
 
