--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -15,6 +15,7 @@
     --color-borde: #cdd6d9;
     --color-card: #f9f9f9;
     --color-gris-suave: #f3f3f3;
+    --rojo-error: #d93025;
 }
 
 /* ===========================
